Adding an about page and customing my blog

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://provenstyle.github.io
-title: ProvenStyle
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Proven Style
+subtitle:
+author: Michael Dudley
 simple_search: http://google.com/search
 description:
 
